...
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="nP3-G3-r78">
                                        <rect key="frame" x="10" y="232.66666666666669" width="353" height="41"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Type Here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tlo-fY-juu">
                                                <rect key="frame" x="0.0" y="0.0" width="353" height="40"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="cRV-08-l0G"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                        <rect key="frame" x="0.0" y="336.66666666666669" width="373" height="41"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="EP1-Et-4gg"/>
                                        </constraints>
                                        <segments>
                                            <segment title="Default"/>
                                            <segment title="Custom"/>
                                        </segments>
                                        <connections>
                                            <action selector="segmentedControlAction:" destination="ccO-BM-G93" eventType="valueChanged" id="bR8-YC-oaf"/>
                                        </connections>
                                    </segmentedControl>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OS5-zU-k9Q">
                                        <rect key="frame" x="0.0" y="439.33333333333337" width="373" height="50"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EpA-tt-oj1">
                                                <rect key="frame" x="10" y="8" width="353" height="40"/>
                                                <accessibility key="accessibilityConfiguration" identifier="ExclusionTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="lXP-xg-ooN"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
...
                                            <constraint firstItem="EpA-tt-oj1" firstAttribute="top" secondItem="OS5-zU-k9Q" secondAttribute="topMargin" id="eNB-xl-FRZ"/>
                                            <constraint firstAttribute="trailing" secondItem="Ebh-aa-zgh" secondAttribute="trailing" constant="20" id="j1t-UZ-q5o"/>
                                        </constraints>
                                    </view>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i85-HY-YWh">
                                        <rect key="frame" x="20" y="552.33333333333337" width="333" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ReversedTextLabel"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="qfN-tW-fce"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
...
